--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Passeio turístico<input type="checkbox" name="check">
 Data de chegada: <br><input type="date" required>
 <br><br>
 
-Cupom de desconto:<br><input type="text" maxlength="6" placeholder="Digite seu cupom">
+Cupom de desconto:<br><input type="text" maxlength="6" min="6" placeholder="Digite seu cupom">
 <br><br>
 
 Termos e condições<br>
